# whale-panel

./: Dockerfile  README.md  SECURITY.md  install.sh  pyproject.toml
backend/alembic/versions/: 8f29a226b288_add_initial_traffic.py  cd9f70ff69d4_add_news_table.py
backend/api/public/: routers.py
backend/api/superadmin/: routers.py
backend/auth/: auth.py
backend/db/: crud.py  model.py
backend/schema/: _input.py  output.py
backend/services/: task_handler.py
backend/services/marzban/: task.py
frontend/: vite.config.ts
frontend/src/lib/: api-client.ts  api.ts
frontend/src/pages/: AdminsPage.tsx  DashboardPage.tsx
frontend/src/pages/components/: AdminFormDialog.tsx  PanelFormDialog.tsx  UserFormDialog.tsx
frontend/src/types/: index.ts
